--- a/booking-reyunos-frontend/src/styles/App.css
+++ b/booking-reyunos-frontend/src/styles/App.css
@@ -10,6 +10,23 @@
   margin-bottom: 20px;
 }
 
+.whatsapp {
+  width: 5vw; /* Ajusta el ancho para que sea igual al alto */
+  height: 5vw; /* Alto fijo */
+  display: flex;
+  position: fixed;
+  font-size: 40px; 
+  padding: 0;
+  bottom: 20px; /* Cambia según sea necesario */
+  right: 20px; /* Cambia según sea necesario */
+  background-color: rgb(21, 139, 15);
+  border-radius: 50%; /* Asegúrate de que sea 50% para un círculo */
+  justify-content: center; /* Centra el contenido horizontalmente */
+  align-items: center; /* Centra el contenido verticalmente */
+  z-index: 1000; /* Asegura que el ícono esté por encima de otros elementos */
+}
+
+
 .accommodations-list {
   display: flex;
   flex-wrap: wrap;
@@ -29,6 +46,20 @@
   width: 700px;
   background-color: #f9f9f9;
   transition: transform 0.2s, box-shadow 0.2s;
+}
+
+.close-button{
+  border-radius: 50%;
+  background-color: #ff3232;
+  color: #f9f9f9;
+  padding: 0 5px;
+  position: absolute;
+  top: 10px;
+  right: 10px;
+  border: none;
+  font-size: 24px;
+  cursor: pointer;
+  z-index: 10; /* Asegúrate de que esté por encima de otros elementos */
 }
 
 .accommodation h3 {
